# arbcfo

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.vercel/: project.json
apps/agent/: .env.example  package.json
apps/agent/src/: agent.ts  cli.ts
apps/web/: package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers-client.tsx  providers.tsx
apps/web/app/approvals/: page.tsx
apps/web/app/components/: conditional-layout.tsx
apps/web/app/inbox/: page.tsx
apps/web/app/oracle/: page.tsx
apps/web/app/policies/: page.tsx
apps/web/app/receipts/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/vault/: page.tsx
apps/web/components/inbox/: create-intent-form.tsx  intent-card.tsx  intent-detail.tsx
apps/web/components/ui/: carousel.tsx  (+6 more)
apps/web/lib/: invoice-parser.ts  prisma.ts  risk-engine.ts  utils.ts  wagmi.ts
apps/web/prisma/: schema.prisma  seed.ts
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployStylusOracle.s.sol
contracts/src/: AgentRiskOracle.sol  ArbCFOVault.sol  IArbCFOTypes.sol  IRiskEngine.sol  ITransactionRiskOracle.sol  MockUSDC.sol  PolicyEngine.sol  ReceiptRegistry.sol  SolidityRiskEngine.sol
contracts/stylus/: Cargo.toml  rust-toolchain.toml
contracts/stylus/src/: lib.rs  main.rs
contracts/test/: AgentRiskOracle.t.sol  ArbCFO.t.sol
docs/: DEMO_FLOW.md  DEPLOYMENTS.md  HACKATHON_TIMELINE.md  TEST_STATUS.md
scripts/: submission_proof_pack.ps1
submission/: DEMO_SCRIPT.md  FEATURES.md  PITCH.md  SCREENSHOTS_GUIDE.md
(+17 files in other folders)
