[package]
name = "arbcfo-risk-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["arbitrum", "stylus", "defi", "treasury"]

[dependencies]
# Stylus SDK — the official Arbitrum Stylus development kit
stylus-sdk = "0.8.4"

# Alloy primitives — U256, Address, etc. Must match stylus-sdk's version
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"

# Minimal allocator for no_std WASM
mini-alloc = "0.8.4"

# Pin serde to pre-1.0.224 — the serde_core split broke alloy-consensus 0.11.x
serde = "=1.0.219"

[dev-dependencies]
# Enable stylus-test feature for unit testing
stylus-sdk = { version = "0.8.4", features = ["stylus-test"] }
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = "=1.0.219"

[features]
# Required for `cargo stylus export-abi`
export-abi = ["stylus-sdk/export-abi"]
# Debug logging (only for devnode, NOT for production)
debug = ["stylus-sdk/debug"]

[[bin]]
name = "arbcfo-risk-engine"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
# Size optimization — critical for WASM 24KB limit
opt-level = "z"
